Remove inline styles on the poll results page
* Remove the inline styles setting the max-width of the bar label. 
* Add the 'label_container' class for CSS targeting

Pages that use the poll results  in the thank you page will now need to include the following in their stylesheets:

.label_container {
  display: inline-block;
  max-width: 15%;
}

.bar_container {
  width: 85%;
  display: inline-block;
}

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -378,6 +378,16 @@ a.simplemodal-close:hover, .simplemodal-close:active {
 }
 
 /** Poll Result Bar **/
+.label_container {
+  display: inline-block;
+  max-width: 15%;
+}
+
+.bar_container {
+  width: 85%;
+  display: inline-block;
+}
+
 .poll_result_bar {
   /*background-color: #000; */
   background-color: lightblue;
