--- a/app/views/surveys/_text_question.html.erb
+++ b/app/views/surveys/_text_question.html.erb
@@ -8,7 +8,9 @@
 %>
 
 <% if element.assetable.answer_type == "field" %>
-  <span class="voctextfield"><%= text_field_tag answer_tag_id, nil, :class => "text_question_field question_#{element.assetable.question_content.id}_answer" %></span>
+  <span class="voctextfield"><%= text_field_tag answer_tag_id, nil, :class => "text_question_field question_#{element.assetable.question_content.id}_answer",
+                                                                    :maxlength => element.assetable.answer_size %></span>
 <% elsif element.assetable.answer_type == "area" %>
-  <span class="voctextarea"><%= text_area_tag answer_tag_id, nil, :class => "text_question_area question_#{element.assetable.question_content.id}_answer"%></span>
+  <span class="voctextarea"><%= text_area_tag answer_tag_id, nil, :class => "text_question_area question_#{element.assetable.question_content.id}_answer",
+                                                                    :maxlength => element.assetable.answer_size %></span>
 <% end -%>
